--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
       "dom"
     ]
   },
+  "exclude": [
+    "cypress/**/*.ts",
+    "cypress.config.ts"
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
