--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production --base-href /curso-angular/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "e2e": "ng e2e",
@@ -35,13 +36,14 @@
     "@angular/compiler-cli": "^18.2.0",
     "@cypress/schematic": "^2.5.2",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
+    "cypress": "latest",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2",
-    "cypress": "latest"
+    "typescript": "~5.5.2"
   }
 }
