--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,8 @@ jobs:
       run: npm run build:prod
 
 # Now add the step to deploy to gh-pages
-    - name: Deploy to gh pages
-      run ng deploy --base-href=/curso-angular/
-      # run: |
-      #   npx angular-cli-ghpages --dir=dist/curso-angular
-      env:
-        CI: true # means to clean install the app
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
