--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/curso-angular",
+            "outputPath": "dist/tienda-musica",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -144,9 +144,6 @@
               "devServerTarget": "tienda-musica:serve:production"
             }
           }
-        },
-        "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
