--- a/angular.json
+++ b/angular.json
@@ -144,6 +144,9 @@
               "devServerTarget": "tienda-musica:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
