--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Run tests
-      #   run: npm run ng -- test --no-watch --no-progress --browsers=ChromeHeadless
+      - name: Run tests
+        run: npm run ng -- test --no-watch --no-progress --browsers=ChromeHeadless
 
       - name: Prepare and deploy
         env:
